# qgis-lizmap-server-plugin

./: .gitattributes  .gitignore  .gitlab-ci.yml  .localconfig.mk  CHANGELOG.md  Makefile  README.md  dump-schemas.py  pyproject.toml  setup.cfg
.docker/: install-qgis-plugin-ci.sh  run-tests.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  stale.yml  tests.yml
.lizcloud/: .gitlab-ci.yml  fabric.mk  factory.mk
lizmap_server/: __init__.py  core.py  exception.py  expression_service.py  filter_by_polygon.py  get_feature_info.py  get_legend_graphic.py  legacy_server_info_handler.py  legend_onoff_filter.py  lizmap_accesscontrol.py  lizmap_api_handler.py  lizmap_filter.py  lizmap_service.py  logger.py  metadata.txt  plausible.py  plugin.py  qgis4_compat.py  qgis_expression.py  requirements.txt  server_info.py  server_info_handler.py  tools.py  tooltip.py  tos_definitions.py
lizmap_server/api/: builder.py  defaults.py  errors.py  handler.py  handlers.py  landingpage.py  logger.py  models.py  openapi.json  request.py  routes.py  swagger.py
lizmap_server/context/: __init__.py  common.py  (+4 more)
requirements/: dev.txt  lint.txt  packaging.txt  tests.txt  tools.txt
schemas/: AttributeTableColumn.json  AttributeTableConfig.json  CrsModel.json  EditWidget.json  FeatureRenderer.json  FieldConfiguration.json  FieldConstraint.json  FieldConstraintExpression.json  FieldDefault.json  GuiProperties.json  LayerDescription.json  LayerTreeGroup.json  LayerTreeLayer.json  LayerTreeRoot.json  LayerVisibility.json  LayerVisibilityPreset.json  LayoutDescription.json  LayoutLabel.json  LayoutMap.json  LayoutPage.json  LayoutSummary.json  OWSProperties.json  ProjectDescription.json  ProjectSummary.json  StyleManager.json  VectorLayerDetails.json  VectorLayerJoinInfo.json
test/: conftest.py  requirements.txt  run-tests.sh  test_expression_service.py  test_expression_service_evaluate.py  test_expression_service_getfeaturewithformscope.py  test_expression_service_replaceexpressiontext.py  test_expression_service_virtualfields.py  test_filter_by_polygon.py  test_get_feature_info.py  test_legend.py  test_legend_onoff.py  test_legend_without_server.py  test_lizmap_accesscontrol.py  test_lizmap_filter.py  test_lizmap_service.py  test_server_core.py  test_server_info.py  utils.py
tests/: README_TESTING.md  conftest.py  pytest.ini  test_expression_service.py  test_expression_service_evaluate.py  test_expression_service_getfeaturewithformscope.py  test_expression_service_replaceexpressiontext.py  test_expression_service_virtualfields.py  test_filter_by_polygon.py  test_get_feature_info.py  test_legend.py  test_legend_onoff.py  test_legend_without_server.py  test_lizmap_accesscontrol.py  test_lizmap_api.py  test_lizmap_filter.py  test_lizmap_service.py  test_server_core.py  test_server_info.py  utils.py
(+38 files in other folders)
