[project]
name = "Lizmap-server-plugin"
authors = [
    { name = "3liz", email = "info@3liz.com" }
]
requires-python = ">=3.9"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]

[project.urls]
homepage = "https://docs.lizmap.com/current/fr/install/pre_requirements.html#lizmap-qgis-server-plugin"
repository = "https://github.com/3liz/qgis-lizmap-server-plugin"
"Bug Reports" = "https://github.com/3liz/qgis-lizmap-server-plugin/issues"

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
]
tests = [
    "pytest >= 5.3",
    "xmldiff",
    "Pillow",
]
lint = [
    "ruff",
    "mypy",
    "bandit",
    "vulture",
    "lxml-stubs",
]
packaging = [
    "qgis-plugin-ci>=2.7.0",
]


# Ruff configuration
# See https://doc.astral.sh/ruff/configuration

[tool.ruff]
line-length = 110
target-version = "py39"
exclude = [
    ".venv",
    ".local",
    ".test/.local",
    ".cache",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "ANN",
    "W",
    "T",
    "COM",
    "RUF",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "E501", # Line too long
]

[tool.ruff.per-file-target-version]
"lizmap_server/context/qjazz.py" = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "T201",
    "E501",
]
"lizmap_server/tooltip.py" = [
    "RUF001",
    "RUF002",
]


[tool.ruff.lint.isort]
#lines-between-types = 1
known-third-party = [
    "qgis",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

[tool.qgis-plugin-ci]
plugin_path = "lizmap_server"
github_organization_slug = "3liz"
project_slug = "qgis-lizmap-server-plugin"

#
# Mypy
#
[tool.mypy]
python_version = "3.9"

exclude = [
    "lizmap_server/context/py_qgis_server.py",
    "lizmap_server/context/qjazz.py",
]

[[tool.mypy.overrides]]
module = "lizmap_server.context.qjazz"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "lizmap_server.context.py_qgis_server"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "py_qgis_server.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qgis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "osgeo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmldiff.*"
ignore_missing_imports = true

